// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`faker > compare getFullText 1`] = `
"import { faker } from "@faker-js/faker";
import { testDto2Faker, test32145Faker, apiResponseFaker, petFaker } from "./faker-models";
import type { Pet } from "./newPet";

/**
 * @tag pet
 * @description Everything about your Pets
 * @UUID Faker-pet
 */
class PetFaker {
    /**
     * @summary summary
     * @UUID operationIdpost
     */
    newtestPost(): NonNullable<Pet.TestPostMutationResponse> {
        return testDto2Faker()
    }

    /**
     * @summary summary
     * @UUID operationIdput
     */
    newtestPut(): NonNullable<Pet.TestPutMutationResponse> {
        return testDto2Faker()
    }

    /**
     * @summary summary
     * @UUID operationIddelete
     */
    delByTest(): NonNullable<Pet.DelByTestMutationResponse> {
        return test32145Faker()
    }

    /**
     * @summary summary
     * @UUID get/pet/test/{test-id}
     */
    testIdGet(): NonNullable<Pet.TestIdGetQueryResponse> {
        return testDto2Faker()
    }

    /**
     * @summary uploads an image
     * @description pet
     * @UUID uploadFile
     */
    uploadImagePost(): NonNullable<Pet.UploadImagePostMutationResponse> {
        return apiResponseFaker()
    }

    /**
     * @summary Add a new pet to the store
     * @UUID addPet
     */
    create(): NonNullable<Pet.CreateMutationResponse> {
        return {}
    }

    /**
     * @summary Update an existing pet
     * @UUID updatePet
     */
    update(): NonNullable<Pet.UpdateMutationResponse> {
        return {}
    }

    /**
     * @summary Finds Pets by status
     * @description Multiple status values can be provided with comma separated strings
     * @UUID findPetsByStatus
     */
    findByStatusGet(): NonNullable<Pet.FindByStatusGetQueryResponse> {
        return faker.helpers.multiple(() => petFaker(), {
            count: 10,
        })
    }

    /**
     * @summary Finds Pets by tags
     * @description Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
     * @UUID findPetsByTags
     */
    findByTagsGet(): NonNullable<Pet.FindByTagsGetQueryResponse> {
        return faker.helpers.multiple(() => petFaker(), {
            count: 10,
        })
    }

    /**
     * @summary Find pet by ID
     * @description Returns a single pet
     * @UUID getPetById
     */
    findByPetId(): NonNullable<Pet.FindByPetIdQueryResponse> {
        return petFaker()
    }

    /**
     * @summary Updates a pet in the store with form data
     * @UUID updatePetWithForm
     */
    petIdPost(): NonNullable<Pet.PetIdPostMutationResponse> {
        return {}
    }

    /**
     * @summary Deletes a pet
     * @UUID deletePet
     */
    delByPetId(): NonNullable<Pet.DelByPetIdMutationResponse> {
        return {}
    }
}

export const petFaker = new PetFaker;

import { faker } from "@faker-js/faker";
import { orderFaker } from "./faker-models";
import type { Pet } from "./Pet";

/**
 * @tag store
 * @description Access to Petstore orders
 * @UUID Faker-store
 */
class StoreFakerService {
    /**
     * @summary Place an order for a pet
     * @UUID placeOrder
     */
    create(): NonNullable<Pet.CreateMutationResponse> {
        return orderFaker()
    }

    /**
     * @summary Find purchase order by ID
     * @description For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
     * @UUID getOrderById
     */
    findByOrderId(): NonNullable<Pet.FindByOrderIdQueryResponse> {
        return orderFaker()
    }

    /**
     * @summary Delete purchase order by ID
     * @description For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
     * @UUID deleteOrder
     */
    delByOrderId(): NonNullable<Pet.DelByOrderIdMutationResponse> {
        return {}
    }

    /**
     * @summary Returns pet inventories by status
     * @description Returns a map of status codes to quantities
     * @UUID getInventory
     */
    inventoryGet(): NonNullable<Pet.InventoryGetQueryResponse> {
        return {}
    }
}

export const storeFakerService = new StoreFakerService;

import { faker } from "@faker-js/faker";
import { userFaker } from "./faker-models";
import type { Pet } from "./Pet";

/**
 * @tag user
 * @description Operations about user
 * @UUID Faker-user
 */
class UserFakerService {
    /**
     * @summary Creates list of users with given input array
     * @UUID createUsersWithArrayInput
     */
    createWithArrayPost(): NonNullable<Pet.CreateWithArrayPostMutationResponse> {
        return {}
    }

    /**
     * @summary Creates list of users with given input array
     * @UUID createUsersWithListInput
     */
    createWithListPost(): NonNullable<Pet.CreateWithListPostMutationResponse> {
        return {}
    }

    /**
     * @summary Get user by user name
     * @UUID getUserByName
     */
    findByUsername(): NonNullable<Pet.FindByUsernameQueryResponse> {
        return userFaker()
    }

    /**
     * @summary Updated user
     * @description This can only be done by the logged in user.
     * @UUID updateUser
     */
    usernamePut(): NonNullable<Pet.UsernamePutMutationResponse> {
        return {}
    }

    /**
     * @summary Delete user
     * @description This can only be done by the logged in user.
     * @UUID deleteUser
     */
    delByUsername(): NonNullable<Pet.DelByUsernameMutationResponse> {
        return {}
    }

    /**
     * @summary Logs user into the system
     * @UUID loginUser
     */
    loginGet(): NonNullable<Pet.LoginGetQueryResponse> {
        return
    }

    /**
     * @summary Logs out current logged in user session
     * @UUID logoutUser
     */
    logoutGet(): NonNullable<Pet.LogoutGetQueryResponse> {
        return {}
    }

    /**
     * @summary Create user
     * @description This can only be done by the logged in user.
     * @UUID createUser
     */
    create(): NonNullable<Pet.CreateMutationResponse> {
        return {}
    }
}

export const userFakerService = new UserFakerService;

import { testdataFaker } from "./testdata-faker.model";
import { faker } from "@faker-js/faker";
import type { Test32145Model } from "../models/Test32145";

export function test32145Faker(): Test32145Model {
    return {
        /**this is description*/
        code: faker.number.int(),
        meta: testdataFaker()
    }
}

import { faker } from "@faker-js/faker";
import type { Test3214Model } from "../models/Test3214";

export function test3214Faker(): Test3214Model {
    return {
        /**默认值*/
        columnDefault: faker.string.alpha(),
        /**this is description*/
        columnLength: faker.number.int(),
        /**this is description*/
        columnName: faker.string.alpha(),
        /**this is description*/
        columnRemark: faker.string.alpha(),
        /**this is description*/
        columnScale: faker.number.int(),
        /**this is description*/
        columnType: faker.string.alpha(),
        /**this is description*/
        delFlag: faker.datatype.boolean(),
        formId: faker.number.int(),
        /**id*/
        id: faker.number.int(),
        /**this is description*/
        notNull: faker.datatype.boolean()
    }
}

import { faker } from "@faker-js/faker";
import type { TestdataModel } from "../models/Testdata";

export function testdataFaker(): TestdataModel {
    return {
        /**this is description*/
        number: faker.number.int(),
        /**this is description*/
        numberOfElements: faker.number.int(),
        /**this is description*/
        totalElements: faker.number.int(),
        /**this is description*/
        totalPages: faker.number.int()
    }
}

import { faker } from "@faker-js/faker";
import type { SortModel } from "../models/Sort";

export function sortFaker(): SortModel {
    return {
        empty: faker.datatype.boolean(),
        sorted: faker.datatype.boolean(),
        unsorted: faker.datatype.boolean()
    }
}

import { test3214Faker } from "./test3214-faker.model";
import { faker } from "@faker-js/faker";
import type { TestDto3Model } from "../models/TestDto3";

export function testDto3Faker(): TestDto3Model {
    return {
        test3214: faker.helpers.multiple(() => test3214Faker(), {
            count: 10,
        })
    }
}

import { testDto3Faker } from "./testDto3-faker.model";
import { testdataFaker } from "./testdata-faker.model";
import { faker } from "@faker-js/faker";
import type { TestDto2Model } from "../models/TestDto2";

export function testDto2Faker(): TestDto2Model {
    return {
        content: testDto3Faker(),
        meta: testdataFaker()
    }
}

import { faker } from "@faker-js/faker";
import type { Test321Model } from "../models/Test321";

export function test321Faker(): Test321Model {
    return {
        id: faker.number.int()
    }
}

import { test321Faker } from "./test321-faker.model";
import { faker } from "@faker-js/faker";
import type { TestDtoModel } from "../models/TestDto";

export function testDtoFaker(): TestDtoModel {
    return {
        /**test321*/
        test321: faker.helpers.multiple(() => test321Faker(), {
            count: 10,
        })
    }
}

import { apiResponseFaker } from "./apiResponse-faker.model";
import { faker } from "@faker-js/faker";
import type { RefListModel } from "../models/RefList";

export function refListFaker(): RefListModel {
    return {
        content: apiResponseFaker(),
        /**string*/
        string: faker.string.alpha(),
        name: faker.string.alpha(),
        /**title*/
        title: faker.string.alpha(),
        /**type*/
        type: faker.string.alpha()
    }
}

import { faker } from "@faker-js/faker";
import type { ApiResponseModel } from "../models/ApiResponse";

export function apiResponseFaker(): ApiResponseModel {
    return {
        code: faker.number.int(),
        type: faker.string.alpha(),
        message: faker.string.alpha()
    }
}

import { faker } from "@faker-js/faker";
import type { CategoryModel } from "../models/Category";

export function categoryFaker(): CategoryModel {
    return {
        id: faker.number.int(),
        name: faker.string.alpha()
    }
}

import { categoryFaker } from "./category-faker.model";
import { tagFaker } from "./tag-faker.model";
import { faker } from "@faker-js/faker";
import type { PetModel } from "../models/Pet";

export function petFaker(): PetModel {
    return {
        id: faker.number.int(),
        category: categoryFaker(),
        name: faker.string.alpha(),
        photoUrls: faker.helpers.multiple(() => faker.string.alpha(), {
            count: 10,
        }),
        tags: faker.helpers.multiple(() => tagFaker(), {
            count: 10,
        }),
        /**pet status in the store*/
        status: faker.string.alpha()
    }
}

import { faker } from "@faker-js/faker";
import type { TagModel } from "../models/Tag";

export function tagFaker(): TagModel {
    return {
        id: faker.number.int(),
        name: faker.string.alpha()
    }
}

import { faker } from "@faker-js/faker";
import type { OrderModel } from "../models/Order";

export function orderFaker(): OrderModel {
    return {
        id: faker.number.int(),
        petId: faker.number.int(),
        quantity: faker.number.int(),
        shipDate: faker.string.alpha(),
        /**Order Status*/
        status: faker.string.alpha(),
        complete: faker.datatype.boolean()
    }
}

import { faker } from "@faker-js/faker";
import type { UserModel } from "../models/User";

export function userFaker(): UserModel {
    return {
        id: faker.number.int(),
        username: faker.string.alpha(),
        firstName: faker.string.alpha(),
        lastName: faker.string.alpha(),
        email: faker.string.alpha(),
        password: faker.string.alpha(),
        phone: faker.string.alpha(),
        /**User Status*/
        userStatus: faker.number.int()
    }
}

export * from "./testdata-faker.model";
export * from "./test32145Model-faker.model";
export * from "./test3214Model-faker.model";
export * from "./testdataModel-faker.model";
export * from "./sortModel-faker.model";
export * from "./test3214-faker.model";
export * from "./testDto3Model-faker.model";
export * from "./testDto3-faker.model";
export * from "./testDto2Model-faker.model";
export * from "./test321Model-faker.model";
export * from "./test321-faker.model";
export * from "./testDtoModel-faker.model";
export * from "./apiResponse-faker.model";
export * from "./refListModel-faker.model";
export * from "./apiResponseModel-faker.model";
export * from "./categoryModel-faker.model";
export * from "./category-faker.model";
export * from "./tag-faker.model";
export * from "./petModel-faker.model";
export * from "./tagModel-faker.model";
export * from "./orderModel-faker.model";
export * from "./userModel-faker.model";
"
`;

exports[`faker > getFullText 1`] = `
"import { faker } from "@faker-js/faker";
import { testDto2Faker, test32145Faker, apiResponseFaker, petFaker } from "./faker-models";
import type { Pet } from "./pet.types";

/**
 * @tag pet
 * @description Everything about your Pets
 */
class PetFakerService {
    /** @summary summary */
    testPost(): NonNullable<Pet.TestPostMutationResponse> {
        return testDto2Faker()
    }

    /** @summary summary */
    testPut(): NonNullable<Pet.TestPutMutationResponse> {
        return testDto2Faker()
    }

    /** @summary summary */
    delByTest(): NonNullable<Pet.DelByTestMutationResponse> {
        return test32145Faker()
    }

    /** @summary summary */
    testIdGet(): NonNullable<Pet.TestIdGetQueryResponse> {
        return testDto2Faker()
    }

    /**
     * @summary uploads an image
     * @description pet
     */
    uploadImagePost(): NonNullable<Pet.UploadImagePostMutationResponse> {
        return apiResponseFaker()
    }

    /** @summary Add a new pet to the store */
    create(): NonNullable<Pet.CreateMutationResponse> {
        return {}
    }

    /** @summary Update an existing pet */
    update(): NonNullable<Pet.UpdateMutationResponse> {
        return {}
    }

    /**
     * @summary Finds Pets by status
     * @description Multiple status values can be provided with comma separated strings
     */
    findByStatusGet(): NonNullable<Pet.FindByStatusGetQueryResponse> {
        return faker.helpers.multiple(() => petFaker(), {
            count: 10,
        })
    }

    /**
     * @summary Finds Pets by tags
     * @description Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
     */
    findByTagsGet(): NonNullable<Pet.FindByTagsGetQueryResponse> {
        return faker.helpers.multiple(() => petFaker(), {
            count: 10,
        })
    }

    /**
     * @summary Find pet by ID
     * @description Returns a single pet
     */
    findByPetId(): NonNullable<Pet.FindByPetIdQueryResponse> {
        return petFaker()
    }

    /** @summary Updates a pet in the store with form data */
    petIdPost(): NonNullable<Pet.PetIdPostMutationResponse> {
        return {}
    }

    /** @summary Deletes a pet */
    delByPetId(): NonNullable<Pet.DelByPetIdMutationResponse> {
        return {}
    }
}

export const petFakerService = new PetFakerService;

import { faker } from "@faker-js/faker";
import { orderFaker } from "./faker-models";
import type { Store } from "./store.types";

/**
 * @tag store
 * @description Access to Petstore orders
 */
class StoreFakerService {
    /** @summary Place an order for a pet */
    create(): NonNullable<Store.CreateMutationResponse> {
        return orderFaker()
    }

    /**
     * @summary Find purchase order by ID
     * @description For valid response try integer IDs with value >= 1 and <= 10. Other values will generated exceptions
     */
    findByOrderId(): NonNullable<Store.FindByOrderIdQueryResponse> {
        return orderFaker()
    }

    /**
     * @summary Delete purchase order by ID
     * @description For valid response try integer IDs with positive integer value. Negative or non-integer values will generate API errors
     */
    delByOrderId(): NonNullable<Store.DelByOrderIdMutationResponse> {
        return {}
    }

    /**
     * @summary Returns pet inventories by status
     * @description Returns a map of status codes to quantities
     */
    inventoryGet(): NonNullable<Store.InventoryGetQueryResponse> {
        return {}
    }
}

export const storeFakerService = new StoreFakerService;

import { faker } from "@faker-js/faker";
import { userFaker } from "./faker-models";
import type { User } from "./user.types";

/**
 * @tag user
 * @description Operations about user
 */
class UserFakerService {
    /** @summary Creates list of users with given input array */
    createWithArrayPost(): NonNullable<User.CreateWithArrayPostMutationResponse> {
        return {}
    }

    /** @summary Creates list of users with given input array */
    createWithListPost(): NonNullable<User.CreateWithListPostMutationResponse> {
        return {}
    }

    /** @summary Get user by user name */
    findByUsername(): NonNullable<User.FindByUsernameQueryResponse> {
        return userFaker()
    }

    /**
     * @summary Updated user
     * @description This can only be done by the logged in user.
     */
    usernamePut(): NonNullable<User.UsernamePutMutationResponse> {
        return {}
    }

    /**
     * @summary Delete user
     * @description This can only be done by the logged in user.
     */
    delByUsername(): NonNullable<User.DelByUsernameMutationResponse> {
        return {}
    }

    /** @summary Logs user into the system */
    loginGet(): NonNullable<User.LoginGetQueryResponse> {
        return
    }

    /** @summary Logs out current logged in user session */
    logoutGet(): NonNullable<User.LogoutGetQueryResponse> {
        return {}
    }

    /**
     * @summary Create user
     * @description This can only be done by the logged in user.
     */
    create(): NonNullable<User.CreateMutationResponse> {
        return {}
    }
}

export const userFakerService = new UserFakerService;

import { testdataFaker } from "./testdata-faker.model";
import { faker } from "@faker-js/faker";
import type { Test32145Model } from "../models/Test32145";

export function test32145Faker(): Test32145Model {
    return {
        /**this is description*/
        code: faker.number.int(),
        meta: testdataFaker()
    }
}

import { faker } from "@faker-js/faker";
import type { Test3214Model } from "../models/Test3214";

export function test3214Faker(): Test3214Model {
    return {
        /**默认值*/
        columnDefault: faker.string.alpha(),
        /**this is description*/
        columnLength: faker.number.int(),
        /**this is description*/
        columnName: faker.string.alpha(),
        /**this is description*/
        columnRemark: faker.string.alpha(),
        /**this is description*/
        columnScale: faker.number.int(),
        /**this is description*/
        columnType: faker.string.alpha(),
        /**this is description*/
        delFlag: faker.datatype.boolean(),
        formId: faker.number.int(),
        /**id*/
        id: faker.number.int(),
        /**this is description*/
        notNull: faker.datatype.boolean()
    }
}

import { faker } from "@faker-js/faker";
import type { TestdataModel } from "../models/Testdata";

export function testdataFaker(): TestdataModel {
    return {
        /**this is description*/
        number: faker.number.int(),
        /**this is description*/
        numberOfElements: faker.number.int(),
        /**this is description*/
        totalElements: faker.number.int(),
        /**this is description*/
        totalPages: faker.number.int()
    }
}

import { faker } from "@faker-js/faker";
import type { SortModel } from "../models/Sort";

export function sortFaker(): SortModel {
    return {
        empty: faker.datatype.boolean(),
        sorted: faker.datatype.boolean(),
        unsorted: faker.datatype.boolean()
    }
}

import { test3214Faker } from "./test3214-faker.model";
import { faker } from "@faker-js/faker";
import type { TestDto3Model } from "../models/TestDto3";

export function testDto3Faker(): TestDto3Model {
    return {
        test3214: faker.helpers.multiple(() => test3214Faker(), {
            count: 10,
        })
    }
}

import { testDto3Faker } from "./testDto3-faker.model";
import { testdataFaker } from "./testdata-faker.model";
import { faker } from "@faker-js/faker";
import type { TestDto2Model } from "../models/TestDto2";

export function testDto2Faker(): TestDto2Model {
    return {
        content: testDto3Faker(),
        meta: testdataFaker()
    }
}

import { faker } from "@faker-js/faker";
import type { Test321Model } from "../models/Test321";

export function test321Faker(): Test321Model {
    return {
        id: faker.number.int()
    }
}

import { test321Faker } from "./test321-faker.model";
import { faker } from "@faker-js/faker";
import type { TestDtoModel } from "../models/TestDto";

export function testDtoFaker(): TestDtoModel {
    return {
        /**test321*/
        test321: faker.helpers.multiple(() => test321Faker(), {
            count: 10,
        })
    }
}

import { apiResponseFaker } from "./apiResponse-faker.model";
import { faker } from "@faker-js/faker";
import type { RefListModel } from "../models/RefList";

export function refListFaker(): RefListModel {
    return {
        content: apiResponseFaker(),
        /**string*/
        string: faker.string.alpha(),
        name: faker.string.alpha(),
        /**title*/
        title: faker.string.alpha(),
        /**type*/
        type: faker.string.alpha()
    }
}

import { faker } from "@faker-js/faker";
import type { ApiResponseModel } from "../models/ApiResponse";

export function apiResponseFaker(): ApiResponseModel {
    return {
        code: faker.number.int(),
        type: faker.string.alpha(),
        message: faker.string.alpha()
    }
}

import { faker } from "@faker-js/faker";
import type { CategoryModel } from "../models/Category";

export function categoryFaker(): CategoryModel {
    return {
        id: faker.number.int(),
        name: faker.string.alpha()
    }
}

import { categoryFaker } from "./category-faker.model";
import { tagFaker } from "./tag-faker.model";
import { faker } from "@faker-js/faker";
import type { PetModel } from "../models/Pet";

export function petFaker(): PetModel {
    return {
        id: faker.number.int(),
        category: categoryFaker(),
        name: faker.string.alpha(),
        photoUrls: faker.helpers.multiple(() => faker.string.alpha(), {
            count: 10,
        }),
        tags: faker.helpers.multiple(() => tagFaker(), {
            count: 10,
        }),
        /**pet status in the store*/
        status: faker.string.alpha()
    }
}

import { faker } from "@faker-js/faker";
import type { TagModel } from "../models/Tag";

export function tagFaker(): TagModel {
    return {
        id: faker.number.int(),
        name: faker.string.alpha()
    }
}

import { faker } from "@faker-js/faker";
import type { OrderModel } from "../models/Order";

export function orderFaker(): OrderModel {
    return {
        id: faker.number.int(),
        petId: faker.number.int(),
        quantity: faker.number.int(),
        shipDate: faker.string.alpha(),
        /**Order Status*/
        status: faker.string.alpha(),
        complete: faker.datatype.boolean()
    }
}

import { faker } from "@faker-js/faker";
import type { UserModel } from "../models/User";

export function userFaker(): UserModel {
    return {
        id: faker.number.int(),
        username: faker.string.alpha(),
        firstName: faker.string.alpha(),
        lastName: faker.string.alpha(),
        email: faker.string.alpha(),
        password: faker.string.alpha(),
        phone: faker.string.alpha(),
        /**User Status*/
        userStatus: faker.number.int()
    }
}

export * from "./testdata-faker.model";
export * from "./test32145Model-faker.model";
export * from "./test3214Model-faker.model";
export * from "./testdataModel-faker.model";
export * from "./sortModel-faker.model";
export * from "./test3214-faker.model";
export * from "./testDto3Model-faker.model";
export * from "./testDto3-faker.model";
export * from "./testDto2Model-faker.model";
export * from "./test321Model-faker.model";
export * from "./test321-faker.model";
export * from "./testDtoModel-faker.model";
export * from "./apiResponse-faker.model";
export * from "./refListModel-faker.model";
export * from "./apiResponseModel-faker.model";
export * from "./categoryModel-faker.model";
export * from "./category-faker.model";
export * from "./tag-faker.model";
export * from "./petModel-faker.model";
export * from "./tagModel-faker.model";
export * from "./orderModel-faker.model";
export * from "./userModel-faker.model";
"
`;
